backend/src/main/java/com/example/photomanagement/common/error/package-info.java
@NullMarked
package com.example.photomanagement.common.error;

import org.jspecify.annotations.NullMarked;
